--- a/app/frontend/spagnesi/template/pagine/default.twig
+++ b/app/frontend/spagnesi/template/pagine/default.twig
@@ -8,8 +8,8 @@
         {{ hook | raw }}
     {% endfor  %}
 
-    <div class="container">
-        {{ pagina.content | raw}}
+    <div class="container mt-5">
+        {{ content.content | raw}}
     </div>
 
     <div class="bg1">
