--- a/app/assets/css/less/common.less
+++ b/app/assets/css/less/common.less
@@ -54,3 +54,31 @@ line-height: 2.5em;
 p{
   line-height: 1.8em;
 }
+
+
+.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev{
+  position: absolute;
+  top: 50%;
+  left: 0;
+  font-size: 10em;
+  opacity:0.2;
+  transform: translate(0,-50%);
+  &.owl-next{
+    left: auto;
+    right:0;
+  }
+}
+
+@media (max-width: 900px) {
+
+  .owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev{
+    position: absolute;
+    top: 0;
+    right: 100%;
+    font-size: 10em;
+    opacity:0.2;
+    &.owl-next{
+      left: 100%;
+    }
+  }
+}
