--- a/app/assets/css/style.less
+++ b/app/assets/css/style.less
@@ -17,7 +17,7 @@ img{
 }
 
 .row{
-  width: 100%;
+  //width: 100%;
 }
 a{
   color: #ce4d4d;
@@ -62,6 +62,14 @@ h2 {
   font-weight: 600;
 }
 
+.sticky-top{
+  top:61px;
+  z-index: auto;
+}
+.sticky-bottom{
+  bottom:0;
+  z-index: auto;
+}
 
 @import "less/buttons";
 @import "less/forms";
