--- a/app/backend/template/fields/media.twig
+++ b/app/backend/template/fields/media.twig
@@ -1,8 +1,29 @@
 <div class="form-group field-media">
-    <label for="company" class=" form-control-label">{{ property }}</label>
-    <input type="hidden" class="field-media-id" placeholder="Enter your company name" class="form-control" name="{{ property }}" value="{{ field.value }}">
-
+    <label for="company" class=" form-control-label">{{ field.label ? field.label : property }}</label>
+    <input type="text" class="form-control media-choser value-{{ property }}" placeholder="Enter your company name" class="form-control" name="{{ property }}" value="{{ field.value }}">
     <figure>
-        <img src="" class="field-media-img">
+        <img src="" class="field-media-img image-{{ property }}">
     </figure>
 </div>
+
+
+<script>
+    $(window).ready(function(){
+
+        (function() {
+
+
+            var mediabrowser = new MediaBrowser("#filebrowser");
+
+
+            mediabrowser.fileChoose(function (file) {
+                $(".media-choser.value-{{ property }}").val(file.permalink);
+                $(".field-media-img.image-{{ property }}").attr("src", file.permalink);
+            });
+            $(".media-choser.value-{{ property }}").on("focus", function (e) {
+                e.preventDefault();
+                mediabrowser.open();
+            })
+        })();
+    });
+</script>
