--- a/app/backend/template/fields/tinymce.twig
+++ b/app/backend/template/fields/tinymce.twig
@@ -1,3 +1,3 @@
-<div class="form-group"><label for="company" class=" form-control-label">{{ property }}</label>
+<div class="form-group"><label for="company" class=" form-control-label">{{ field.label ? field.label : property }}</label>
     <textarea class="form-control tinymce" name="{{ property }}">{{ field.value }}</textarea>
 </div>
