--- a/app/backend/template/parts/left-panel.twig
+++ b/app/backend/template/parts/left-panel.twig
@@ -19,7 +19,7 @@
 
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="index.html"> <i class="menu-icon fa fa-dashboard"></i>Dashboard </a>
+                    <a href="/backend/main/"> <i class="menu-icon fa fa-chart-line"></i>Dashboard </a>
                 </li>
                 <h3 class="menu-title">Gestione contenuti</h3>
 
@@ -27,7 +27,7 @@
 
 
                     <li class="menu-item-has-children dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-laptop"></i>{{ m.label }}</a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <i class="menu-icon fa fa-{{ m.icon?m.icon : "laptop" }}"></i>{{ m.label }}</a>
                         {% if m.children %}
                         <ul class="sub-menu children dropdown-menu">
                             {% for children in m.children %}
