--- a/app/frontend/spagnesi/template/ecommerce/carrello.twig
+++ b/app/frontend/spagnesi/template/ecommerce/carrello.twig
@@ -1,7 +1,7 @@
 {% extends "base/template.twig" %}
 
 {% block content %}
-    <main style="padding-top: 150px">
+    <main  class="mb-5 pt-5">
         <div class="container">
 
 
@@ -9,21 +9,23 @@
                 <div class="col-8">
                     <h2>Prodotti presenti nel carrello</h2>
 
-                    <div class="alert alert-dark">
+                    {% if params.msg %}
+                        <div class="alert alert-dark">
 
-                        {{ params.msg }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+                            {{ params.msg }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
 
-                    </div>
+                        </div>
+                    {% endif %}
 
                     {% for lineitem in carrello.lineitems %}
                         <div class="card mb-3">
                             <div class="row card-body">
                                 <div class="col-2">
                                     <figure class="thumbnail">
-                                        <img class="thumbnail" src="{{ lineitem.variant.images[0].permalink }}">
+                                        <img class="thumbnail" src="{{ lineitem.variant.immagini[0].value}}">
                                     </figure>
 
 
