--- a/app/frontend/spagnesi/template/ecommerce/shop/list.twig
+++ b/app/frontend/spagnesi/template/ecommerce/shop/list.twig
@@ -6,6 +6,7 @@
     <main>
         <div class="container">
 
+            {% block innercontent %}
             <div class="row">
 
                 <div class="col">
@@ -18,6 +19,9 @@
                     </div>
                 </div>
             </div>
+
+            {% endblock %}
+
         </div>
     </main>
 {% endblock %}
