--- a/app/frontend/spagnesi/template/parti/anteprima-prodotto.twig
+++ b/app/frontend/spagnesi/template/parti/anteprima-prodotto.twig
@@ -1,10 +1,10 @@
 <div class="anteprima-prodotto">
     <div class="row img-bg">
         <div class="col">
-            <img src="{{ prodotto.images[ index % 2 == 1 ? 0 : 1 ].permalink }}">
+            <img src="{{ prodotto.immagini[ index % 2 == 1 ? 0 : 1 ].value }}">
         </div>
         <div class="col">
-            <img src="{{ prodotto.images[ index % 2 ].permalink }}">
+            <img src="{{ prodotto.immagini[ index % 2 ].value }}">
         </div>
     </div>
 
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-6">
                     <h2>{{ prodotto.nome }}</h2>
-                    {{ prodotto.valoriCampi.riassunto.valore | raw }}
+                    {{ prodotto.valoriCampi.descrizione_breve.valore | raw }}
 
                 </div>
                 <div class="col-6">
