--- a/app/frontend/spagnesi/template/base/header/header.twig
+++ b/app/frontend/spagnesi/template/base/header/header.twig
@@ -28,7 +28,7 @@
 
                     <a href="/">
                         <img class="logo" src="/assets/img/logo/logo-lab-white.png" alt="DivaniLab">
-                        <img class="logo logo-black" src="/assets/img/logo/logo-lab.png" alt="DivaniLab">asd
+                        <img class="logo logo-black" src="/assets/img/logo/logo-lab.png" alt="DivaniLab">asdsadasd
                     </a>
 
                     <nav>
