--- a/app/frontend/spagnesi/template/base/header/header.twig
+++ b/app/frontend/spagnesi/template/base/header/header.twig
@@ -1,120 +1,6 @@
-<!-- Navbar -->
-<header class="main-header {{ headerClass }}  ">
 
-    <section class="navbar container">
-
-        <div class="row">
-            <div class="col-1">
-
-            </div>
-            <div class="text-center col-10">
-                <div id="mainmenu" class="container">
-                    <nav>
-
-                        <ul>
-                        {% for item in frontend.menu.header.items %}
-                            <li><a href="{{ item.link }}">{{ item.label }}</a></li>
-                        {% endfor %}
-                        </ul>
-
-                        <!--
-                        <ul>
-                            <li><a href="/divani">Divani</a></li>
-                            <li><a href="/poltrone">Poltrone</a></li>
-                            <li><a href="/divani-letto">Divani letto</a></li>
-                        </ul>
-                        -->
-                    </nav>
-
-                    <a href="/">
-                        <img class="logo" src="/assets/img/logo/logo-lab-white.png" alt="DivaniLab">
-                        <img class="logo logo-black" src="/assets/img/logo/logo-lab.png" alt="DivaniLab">
-                    </a>
-
-                    <nav>
-                        <ul>
-                            {% for item in frontend.menu.headerright.items %}
-
-                                {% if item.items %}
-                                    <li><a href="#">{{ item.nome }}</a>
-                                        <ul class="submenu">
-                                            {% for item in item.items %}
-                                                <li><a href="{{ item.link }}">{{ item.label }}</a></li>
-                                            {% endfor %}
-
-                                        </ul>
-                                    </li>
-
-                                {% else %}
-                                    <li><a href="{{ item.link }}">{{ item.label }}</a></li>
-                                {% endif %}
-
-
-                            {% endfor %}
-                            <li><a href="{{ router_service.getRoute("frontend.ecommerce.carrello").build() }}"><i class="fas fa-shopping-cart"></i></a></li>
-                            <li><a href="{{ router_service.getRoute("frontend.ecommerce.carrello").build() }}"><i class="fas fa-user"></i></a>
-
-                                <ul class="submenu">
-                                        <li><a href="{{ item.link }}">Il mio profilo</a></li>
-                                        <li><a href="{{ item.link }}">Logout</a></li>
-                                </ul>
-
-                            </li>
-                        </ul>
-
-                        <!--
-                        <ul>
-                            <li><a href="/outlet">Outlet</a></li>
-                            <li><a href="/guida-pelli-tessuti">Pelli e Tessuti</a></li>
-                            <li><a href="#">Divani Lab</a>
-                                <ul class="submenu">
-                                    <li><a href="/divani">Qualità Artigiana</a></li>
-                                    <li><a href="/divani">Pagamenti Sicuri</a></li>
-                                    <li><a href="/divani">Spedizioni e Resi</a></li>
-                                    <li><a href="/divani">F.A.Q.</a></li>
-                                </ul>
-                            </li>
-
-                         </ul>
-                         -->
-                    </nav>
-
-                </div>
-            </div>
-            <div class="col-1">
-
-            </div>
-        </div>
-
-        <!-- Main menu -->
-
-        <!-- //end Main menu -->
-
-    </section>
-
-    <!-- //end Navbar height -->
-</header>
-<!-- //end Navbar -->
-{#
-{% if breadcrumbs %}
-    <!-- Breadcrumbs-->
-    <section class="breadcrumbs">
-        <div class="container">
-            <a href="/">home</a>
-
-            {% for value in breadcrumbs %}
-                {% if value.nolink %}
-                    <span class="divider">&nbsp;</span>
-                    <a>{{ value.label }}</a>
-                {% else %}
-                    <span class="divider">&nbsp;</span>
-                    <a href="{{ value.url }}">{{ value.label }}</a>
-                {% endif %}
-            {% endfor %}
-
-        </div>
-    </section>
-    <!-- //end Breadcrumbs -->
+{% if Request.isMobile %}
+    {% include "base/header/header-mobile.twig" %}
+{% else %}
+    {% include "base/header/header-desktop.twig" %}
 {% endif %}
-
-#}
