--- a/app/assets/css/less/header.less
+++ b/app/assets/css/less/header.less
@@ -108,3 +108,93 @@
 .main-header.always-fixed + * {
   margin-top: 61px;
 }
+
+
+@media (max-width: 960px) {
+  .main-header{
+    .close-toggle-menu{
+      display: none;
+    }
+    .navbar{
+      background: #fff;
+      z-index: 2;
+    }
+    .navbar .logo{
+      height:4em;
+      margin: 0;
+    }
+    background: #000;
+    .actions{
+      a{
+        margin-left:1em;
+        font-size: 1.6em;
+      }
+    }
+
+    &:before{
+      content: '';
+      width: 100%;
+      height:100%;
+      position: fixed;
+      background: rgba(0,0,0,0);
+      top:0;
+      left:0;
+      z-index:1;
+      pointer-events: none;
+    }
+
+    
+    #mainmenu{
+
+
+      transition: all 500ms;
+      max-height: 0;
+      overflow: hidden;
+      nav {
+        width: 100%;
+        display: block;
+        > ul {
+          display: block;
+          margin:0;
+          padding:0;
+          li {
+            display: block;
+            text-align: center;
+            padding: 1em 2em;
+            border-bottom: 1px solid #ddd;
+          }
+        }
+      }
+    }
+
+    
+    &.open{
+
+      &:before{
+
+        transition: 500ms;
+        background: rgba(0,0,0,0.4);
+        z-index:1;
+
+      }
+
+
+      .toggle-menu{
+        display: none;
+      }
+      .close-toggle-menu{
+        display: inline-block;
+      }
+
+      #mainmenu{
+
+        max-height: 100vh;
+
+      }
+    }
+
+
+  }
+
+
+}
