--- a/app/assets/css/less/home.less
+++ b/app/assets/css/less/home.less
@@ -28,4 +28,31 @@
     color: #fff;
     z-index: 3;
   }
+
+
+
+  @media (max-width: 900px){
+    position: relative;
+    width: 100%;
+    height:100vh;
+    overflow: hidden;
+    &:after {
+      background: #000;
+      height: 100%;
+      z-index:1;
+    }
+    img{
+      height: 100%;
+      max-width: none;
+      z-index:2;
+      position: relative;
+      opacity: 0.5;
+    }
+
+    article{
+      top: 50%;
+      bottom: auto;
+      transform: translate(-50%,-50%);
+    }
+  }
 }
