--- a/app/assets/css/less/prodotto.less
+++ b/app/assets/css/less/prodotto.less
@@ -45,6 +45,30 @@
     }
   }
 
+  @media (max-width: 900px){
+    border: 1px solid #000;
+    padding: 1em;
+    margin-top: 1em;
+    .col-md-6:nth-of-type(2){
+      border-top:1px solid #ccc;
+      padding-top: 1em;
+      margin-top: 1em;
+    }
+    .price,.old-price{
+      font-size: 2em;
+    }
+    .info{
+      display: block;
+      position: relative;
+      padding: 0;
+      background: #fff;
+      color: #000;
+      h2{
+        font-size: 2em;
+      }
+    }
+  }
+
 
 }
 
@@ -83,6 +107,22 @@
 
     .btn{
       font-size:1.2em;
+    }
+  }
+
+  @media (max-width: 900px){
+    .info{
+      position: relative;
+      left:auto;
+      bottom:auto;
+      background: rgba(255,255,255,0.5);
+      padding: 3em;
+      width:100%;
+      font-size:1.1em;
+
+      .btn{
+        font-size:1.2em;
+      }
     }
   }
 }
