--- a/app/frontend/spagnesi/template/ecommerce/carrello.twig
+++ b/app/frontend/spagnesi/template/ecommerce/carrello.twig
@@ -6,7 +6,7 @@
 
 
             <div class="row">
-                <div class="col-8">
+                <div class="col-md-8">
                     <h2>Prodotti presenti nel carrello</h2>
 
                     {% if params.msg %}
@@ -70,7 +70,7 @@
 
                 </div>
 
-                <div class="col-4 pt-2">
+                <div class="col-md-4 pt-2">
                     {% if not carrello.coupon %}
                     <div class="card mt-5 p-2 bg-light">
 
