--- a/app/frontend/spagnesi/template/pagine/home.twig
+++ b/app/frontend/spagnesi/template/pagine/home.twig
@@ -19,11 +19,13 @@
         </article>
     </section>
 
+    {% if not Request.isMobile %}
     <div class="container text-center mt-5">
         <h2>Trova il tuo divano ideale</h2>
         <p> Tutte le nostre collezioni sono disponibili con <strong>rivestimento in pelle</strong>, <strong>eco-pelle</strong> o <strong>tessuto</strong>.<br />Cerca il divano ideale e personalizzalo secondo i tuoi gusti.</p><p>Il tuo divano verrà <strong>realizzato su misura</strong> in base al rivestimento selezionato</p>
         {% include "parti/barra-ricerca.twig" %}
     </div>
+        {% endif %}
 
     {% for hook in pagina.hooks.prodottiInEvidenza %}
         {{ hook | raw }}
@@ -32,7 +34,6 @@
     <div class="container">
         {{ pagina.content | raw}}
 
-
         {% for prodotto in prodotti %}
             {% include "parti/anteprima-prodotto.twig" with {prodotto : prodotto, index: loop.index} %}
         {% endfor %}
@@ -40,101 +41,6 @@
     </div>
 
 
-
-
-    <!--
-    <div class="anteprima-prodotto mb-5">
-        <div class="row">
-            <div class="col">
-                <img src="/assets/img/mocked/divan1.png">
-            </div>
-            <div class="col">
-                <img src="/assets/img/mocked/divano1ambient.png">
-            </div>
-        </div>
-
-        <section class="info">
-            <div class=" ">
-                <div class="row">
-                    <div class="col">
-                        <h2>Cecilia</h2>
-                        <p>
-                            Lorem ipsum d
-                            olor sit amet, consectetur adipiscing elit. Cras dapibus vulputate diam eu pretium. Mauris elit orci, ultricies id fermentum vel, porta et eros. Vestibulum condimentum lectus in convallis feugiat. Sed vulputate fringilla felis. Aliquam ut arcu et dui feugiat scelerisque eu quis diam. Mauris placerat congue dui sit amet blandit. Phasellus condimentum libero vel velit auctor, sit amet tincidunt velit varius.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <span class="price">1.200€</span>
-                        <span class="old-price">1.600€</span>
-
-                        <div class="azioni-veloci">
-                            <div class="row mb-4">
-                                <div class="col-12">
-                                    <a href="" class="btn btn-primary d-block">Compra subito</a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <a href="" class="btn btn-primary d-block">Compra subito</a>
-                                </div>
-                                <div class="col-6">
-                                    <a href="" class="btn btn-primary d-block">Compra subito</a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-    </div>
-
-    <div class="anteprima-prodotto">
-        <div class="row">
-            <div class="col">
-                <img src="/assets/img/mocked/divano2ambient.png">
-            </div>
-            <div class="col">
-                <img src="/assets/img/mocked/divano2.png">
-            </div>
-        </div>
-
-        <section class="info">
-            <div class=" ">
-                <div class="row">
-                    <div class="col">
-                        <h2>Cecilia</h2>
-                        <p>
-                            Lorem ipsum d
-                            olor sit amet, consectetur adipiscing elit. Cras dapibus vulputate diam eu pretium. Mauris elit orci, ultricies id fermentum vel, porta et eros. Vestibulum condimentum lectus in convallis feugiat. Sed vulputate fringilla felis. Aliquam ut arcu et dui feugiat scelerisque eu quis diam. Mauris placerat congue dui sit amet blandit. Phasellus condimentum libero vel velit auctor, sit amet tincidunt velit varius.
-                        </p>
-                    </div>
-                    <div class="col">
-                        <span class="price">1.200€</span>
-                        <span class="old-price">1.600€</span>
-
-                        <div class="azioni-veloci">
-                            <div class="row mb-4">
-                                <div class="col-12">
-                                    <a href="" class="btn btn-primary d-block">Compra subito</a>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">
-                                    <a href="" class="btn btn-primary d-block">Compra subito</a>
-                                </div>
-                                <div class="col-6">
-                                    <a href="" class="btn btn-primary d-block">Compra subito</a>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>-->
 
 
 
