--- a/app/backend/template/base.twig
+++ b/app/backend/template/base.twig
@@ -57,7 +57,10 @@
     <script src="/backend/theme/assets/js/lib/data-table/buttons.print.min.js"></script>
     <script src="/backend/theme/assets/js/lib/data-table/buttons.colVis.min.js"></script>
     <script src="/backend/theme/assets/js/lib/data-table/datatables-init.js"></script>
-    <script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>
+
+
+    <!--<script src="https://cloud.tinymce.com/stable/tinymce.min.js"></script>-->
+    <script src="/backend/assets/js/lib/tinymce/tinymce.min.js"></script>
     <script
             src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"
             integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
